# httpcountries

./: Cargo.toml
resource/: countries-v3.1.json  index.html
src/: api.rs  data.rs  main.rs
