[package]
name = "httpcountries"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread", "fs"] }
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19.0"
serde_json = "1.0.111"
regex = "1.10.2"
log = "0.4.20"
